# TeleBank_backend

./: Cargo.toml  README.md
src/: connect_db.rs  lib.rs  main.rs
src/routes/: auth.rs
src/sql/: insert_transaction.sql  insert_user.sql  select_balance.sql  select_transaction_by_id.sql  select_users_transactions.sql  verify_friendship.sql
