[package]
name = "telebank_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
shuttle-runtime = "0.57"
shuttle-axum = "0.57.0"
shuttle-service = "0.57"  # adjust to the latest version
shuttle-secrets = "0.42"  # for environment variables
tower-http = { version = "0.6.2", features = ["cors"]}
serde_json = "1.0.145"
serde = "1.0.226"
uuid = "1.18.1"
chrono = "0.4.42"
jwt = "0.16.0"
hmac = "0.12.1"
bcrypt = "0.17.1"
cookie = "0.18.1"
rand = "0.9.2"
axum-extra = { version = "0.10.3", features = ["cookie"] }
